# forensim

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: package-lock.json  package.json
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/api/: client.ts  types.ts
app/src/components/: AnnotationPanel.tsx  ApiStatusBar.tsx  EvidencePicker.tsx  ExportPanel.tsx  InferencePanel.tsx  NuRecPanel.tsx  ReconstructionPanel.tsx  ResultPanel.tsx  ScenarioPanel.tsx  SensitivityPanel.tsx  SpatterPanel.tsx  SplatViewer.tsx
app/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ProgressBar.tsx  Skeleton.tsx
assets/sample-scenes/crime-scene-01/: README.md  annotations.json
crates/forensim-core/: Cargo.toml
crates/forensim-core/src/: bayes.rs  hmm.rs  lib.rs  markov.rs  monte_carlo.rs  stats.rs
docs/: architecture.md  probability-model.md  reconstruction-guide.md
python/forensim/: __init__.py
python/forensim/annotate/: __init__.py  manager.py  weights.py
python/forensim/api/: __init__.py  main.py
python/forensim/api/routes/: annotate.py  export.py  infer.py  nurec.py  reconstruct.py  simulate.py
python/forensim/export/: __init__.py  report.py  usd.py  video.py
python/forensim/infer/: __init__.py  sensitivity.py  sequence.py
python/forensim/reconstruct/: __init__.py  colmap.py  gsplat.py  nurec.py  pipeline.py  usd_export.py
python/forensim/simulate/: __init__.py  fluid_spatter.py  physx_runner.py  scene_builder.py  spatter_analysis.py
python/tests/: conftest.py  test_annotate.py  test_export.py  test_fluid_spatter.py  test_reconstruct.py  test_sensitivity.py  test_simulate.py
python/tests/fixtures/: synthetic_scene.py
python/tests/integration/: test_reconstruct.py  test_reconstruct_e2e.py
scripts/: generate_sample_dataset.py  run_demo.py  setup-dev.ps1
