[workspace]
members = [
    "crates/forensim-core",
    "app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["forensim contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/forensim/forensim"

[workspace.dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
nalgebra = "0.33"
ndarray = "0.17"
statrs = "0.18"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
