[package]
name = "forensim-app"
version = "0.1.0"
description = "ForenSim — Forensic Scene Reconstruction Desktop App"
authors = ["forensim contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "d_forensimapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
forensim-core = { path = "../../crates/forensim-core" }
tauri-plugin-dialog = { version = "2.7.1", default-features = false }
tauri-plugin-fs = { version = "2.5.1", default-features = false }
tauri-plugin-shell = { version = "2.3.5", default-features = false }

